# LinuxScreenshot

./: .gitignore  CMakeLists.txt  bmp.h  main.c
